--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.dhbw.uebung01">
+    package="com.dhbw.mummefelix.uebung03">
 
     <application
         android:allowBackup="true"
@@ -8,8 +8,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Uebung01">
-        <activity android:name=".MainActivity">
+        android:theme="@style/Theme.Uebung03">
+        <activity android:name="com.dhbw.mummefelix.uebung03.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
